test/error/error.input066.zc
Enum value redeclared:z on line 2 of input066.zc
